recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var tableau:Array[Int]
    ^butLast:11: error: not enough arguments for method apply: (i: Int)Int in class Array.
Unspecified value parameter i.
return tableau()
              ^